--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Open+Sans:ital@1&family=Ubuntu&display=swap");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -9875,8 +9876,33 @@ h3 {
     border-color: #dee2e6;
   }
 }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body.home {
+  margin-top: 144px;
+}
+body.home .content {
+  padding: 40px;
+  background: #e3e3e3;
+}
+
 header {
-  background-color: black;
+  background-color: #e3e3e3;
+}
+header .main-logo {
+  background: #000000;
+  height: 90px;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
 }
 header .navbar-expand-lg.bg-light {
   background-color: transparent !important;
@@ -9887,16 +9913,48 @@ header .navbar-expand-lg.bg-light {
     margin: 0 auto;
   }
 }
+header nav.navbar {
+  padding: 0rem 1rem;
+}
 header ul.navbar-nav li.nav-item a:focus, header ul.navbar-nav li.nav-item a.nav-link {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 21px;
-  color: yellow;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.6rem;
+  color: #000000;
+  padding: 1.5rem 1.5rem;
 }
 header ul.navbar-nav li.nav-item a:hover {
-  color: #6c757d !important;
+  color: #ee2e24 !important;
+}
+header ul.navbar-nav li.nav-item.active a {
+  background-color: #fcfcfc;
 }
 header ul.navbar-nav li.nav-item.active a:focus, header ul.navbar-nav li.nav-item.active a.nav-link {
-  color: #6c757d;
+  color: #ee2e24;
+}
+
+/* ====================================================================================================================
+ * CUSTOM CSS
+ * ====================================================================================================================*/
+.flex-caption {
+  background: transparent !important;
+  text-align: center;
+}
+.flex-caption p {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 6rem;
+  padding-bottom: 1.75rem;
+  position: relative;
+  left: -12%;
+}
+.flex-caption span {
+  font-family: "Dancing Script", cursive;
+  font-size: 3.5rem;
+  background: #f47920;
+  color: #000000;
+  padding: 0.2rem 6rem;
+  position: relative;
+  bottom: -1.2rem;
+  border-radius: 1rem 1rem 0 0;
 }
 
 /*# sourceMappingURL=main.css.map */
