--- a/flexslider.css
+++ b/flexslider.css
@@ -19,50 +19,55 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family:FontAwesome;
+  src: url('fonts/fontawesome-webfont.eot');
+  src: url('fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg#fontawesome-webfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 /* ====================================================================================================================
  * RESETS
  * ====================================================================================================================*/
-.flex-container a:hover,
-.flex-slider a:hover {
-  outline: none;
-}
-.slides,
-.slides > li,
-.flex-control-nav,
-.flex-direction-nav {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.flex-pauseplay span {
-  text-transform: capitalize;
-}
-/* ====================================================================================================================
- * BASE STYLES
- * ====================================================================================================================*/
-.flexslider {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  border: 0 !important;
-  border-radius: 0 !important;
-}
-.flexslider .slides > li {
-  display: none;
-  -webkit-backface-visibility: hidden;
-}
-.flexslider .slides img {
-  width: 100%;
-  display: block;
-}
-.flexslider .slides:after {
-  content: "\0020";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-}
+ .flex-container a:hover,
+ .flex-slider a:hover {
+   outline: none;
+ }
+ .slides,
+ .slides > li,
+ .flex-control-nav,
+ .flex-direction-nav {
+   margin: 0;
+   padding: 0;
+   list-style: none;
+ }
+ .flex-pauseplay span {
+   text-transform: capitalize;
+ }
+ /* ====================================================================================================================
+  * BASE STYLES
+  * ====================================================================================================================*/
+ .flexslider {
+   margin: 0;
+   padding: 0;
+ }
+ .flexslider .slides > li {
+   display: none;
+   -webkit-backface-visibility: hidden;
+ }
+ .flexslider .slides img {
+   width: 100%;
+   display: block;
+ }
+ .flexslider .slides:after {
+   content: "\0020";
+   display: block;
+   clear: both;
+   visibility: hidden;
+   line-height: 0;
+   height: 0;
+ }
+
 html[xmlns] .flexslider .slides {
   display: block;
 }
@@ -78,12 +83,12 @@ html[xmlns] .flexslider .slides {
 .flexslider {
   margin: 0 0 0px;
   background: #fff;
-  border: 4px solid #fff;
+  border: 0;
   position: relative;
   zoom: 1;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
   -webkit-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   -o-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
@@ -122,7 +127,7 @@ html[xmlns] .flexslider .slides {
   text-decoration: none;
   display: block;
   width: 40px;
-  height: 60px;
+  height: 72px;
   margin: -20px 0 0;
   position: absolute;
   top: 50%;
@@ -131,7 +136,6 @@ html[xmlns] .flexslider .slides {
   opacity: 0;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -139,15 +143,14 @@ html[xmlns] .flexslider .slides {
   transition: all 0.3s ease-in-out;
 }
 .flex-direction-nav a:before {
-  font-family: "flexslider-icon";
-  font-size: 40px;
+  content: "\f053";
+  font-family: FontAwesome;
+  font-size: 52px;
   display: inline-block;
-  content: '\f001';
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  color: rgba(244, 121, 32, 0.8);
 }
 .flex-direction-nav a.flex-next:before {
-  content: '\f002';
+  content: '\f054';
 }
 .flex-direction-nav .flex-prev {
   left: -50px;
@@ -190,10 +193,12 @@ html[xmlns] .flexslider .slides {
   color: #000;
 }
 .flex-pauseplay a:before {
-  font-family: "flexslider-icon";
+  content: "\f067";
+  font-family: FontAwesome;
+    font-style: normal;
+    font-weight: 900;
   font-size: 20px;
   display: inline-block;
-  content: '\f004';
 }
 .flex-pauseplay a:hover {
   opacity: 1;
