--- a/main.css
+++ b/main.css
@@ -9942,45 +9942,76 @@ header ul.navbar-nav li.nav-item.active a:focus, header ul.navbar-nav li.nav-ite
 /* ====================================================================================================================
  * CUSTOM SCSS
  * ====================================================================================================================*/
-.flex-direction-nav a:before {
-  font-family: "Font Awesome 5 Free";
-  font-size: 5.8rem;
-  content: "";
-  font-weight: 900;
-  display: inline-block;
-  color: rgba(244, 121, 32, 0.8);
-}
+@media (min-width: 20em) {
+  .flex-direction-nav a:before {
+    font-family: "Font Awesome 5 Free";
+    font-size: 4.8rem;
+    content: "";
+    font-weight: 900;
+    display: inline-block;
+    color: rgba(244, 121, 32, 0.8);
+  }
 
-.flex-direction-nav a.flex-next:before {
-  content: "";
-}
+  .flex-direction-nav a.flex-next:before {
+    content: "";
+  }
 
-.flex-direction-nav a:before {
-  color: rgba(244, 121, 32, 0.8) !important;
-}
+  .flex-direction-nav a:before {
+    color: rgba(244, 121, 32, 0.8) !important;
+  }
 
-.flex-caption {
-  background: transparent !important;
-  text-align: center;
+  .flex-caption {
+    background: transparent !important;
+    text-align: center;
+  }
+  .flex-caption p {
+    font-family: "Ubuntu", sans-serif;
+    font-size: 3rem;
+    padding-bottom: 0rem;
+    position: relative;
+    left: 0;
+    right: 0;
+    margin-bottom: 0rem;
+  }
+  .flex-caption span {
+    font-family: "Dancing Script", cursive;
+    font-size: 2.25rem;
+    background: #f47920;
+    color: #000000;
+    padding: 0.2rem 6rem 0.5rem 6rem;
+    position: relative;
+    bottom: -1.3rem;
+    border-radius: 1rem 1rem 0 0;
+  }
 }
-.flex-caption p {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 6rem;
-  padding-bottom: 1.75rem;
-  position: relative;
-  left: -12%;
-}
-.flex-caption span {
-  font-family: "Dancing Script", cursive;
-  font-size: 3.5rem;
-  background: #f47920;
-  color: #000000;
-  padding: 0.2rem 6rem 0.5rem 6rem;
-  position: relative;
-  bottom: -0.9rem;
-  border-radius: 1rem 1rem 0 0;
-}
+@media (min-width: 30em) {
+  .flex-direction-nav a:before {
+    font-size: 5.8rem;
+  }
 
+  .flex-caption p {
+    font-size: 5rem;
+    padding-bottom: 1.25rem;
+  }
+  .flex-caption span {
+    font-size: 3rem;
+    padding: 0.2rem 6rem 0.5rem 6rem;
+    position: relative;
+    bottom: -1.2rem;
+    border-radius: 1rem 1rem 0 0;
+  }
+}
+@media (min-width: 48em) {
+  .flex-caption p {
+    font-size: 6rem;
+    padding-bottom: 1.75rem;
+    left: -12%;
+  }
+  .flex-caption span {
+    font-size: 3.5rem;
+    bottom: -0.9rem;
+  }
+}
 /*
  *  Owl Carousel - Core
  */
@@ -10351,7 +10382,7 @@ body.home .wrap-container-ev {
   padding: 3rem 1.5rem;
 }
 body.home .wrap-container-ev .entrevista-viajera {
-  max-width: 960px;
+  max-width: 680px;
   margin: 0 auto;
   border: 1px solid #2384c6;
 }
@@ -10394,8 +10425,6 @@ body.home .wrap-container-ev .entrevista-viajera .content .summary {
   color: #ffffff;
   position: absolute;
   z-index: 18;
-  top: 20px;
-  max-width: 90%;
   left: 0;
   right: 0;
   top: 50%;
@@ -10406,17 +10435,12 @@ body.home .wrap-container-ev .entrevista-viajera .content .summary {
 }
 body.home .wrap-container-ev .entrevista-viajera .content .summary h4 {
   font-family: "Ubuntu", sans-serif;
-  font-size: 3rem;
 }
 body.home .wrap-container-ev .entrevista-viajera .content .summary p {
   text-shadow: 2px 2px 3px #410805;
-  margin-bottom: 2rem;
 }
 body.home .wrap-container-ev .entrevista-viajera .content .summary > button {
-  width: 5.5rem;
-  height: 5.5rem;
   border-radius: 50%;
-  box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5);
   border: none;
   background: #ffffff;
   text-align: center;
@@ -10439,34 +10463,79 @@ body.home .wrap-container-ev .entrevista-viajera .content .summary > button a {
     max-width: 100%;
   }
   body.home .wrap-container-ev .entrevista-viajera .content .summary h4 {
-    margin-bottom: 1.5rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
   }
   body.home .wrap-container-ev .entrevista-viajera .content .summary p {
     display: none;
   }
-}
-@media (min-width: 23.4375em) {
-  body.home .wrap-container-ev .entrevista-viajera .content .summary {
-    max-width: 100%;
-  }
-  body.home .wrap-container-ev .entrevista-viajera .content .summary h4 {
-    margin-bottom: 1.5rem;
-  }
-  body.home .wrap-container-ev .entrevista-viajera .content .summary p {
-    display: none;
+  body.home .wrap-container-ev .entrevista-viajera .content .summary > button {
+    width: 4.5rem;
+    height: 4.5rem;
+    box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.5);
   }
 }
-@media (min-width: 40em) {
+@media (min-width: 30em) {
   body.home .wrap-container-ev .entrevista-viajera .content .summary {
-    max-width: 60%;
+    max-width: 90%;
   }
   body.home .wrap-container-ev .entrevista-viajera .content .summary h4 {
-    font-size: 2.5rem;
-    margin-top: 0;
-    padding: 0;
+    margin-bottom: 0.25rem;
   }
   body.home .wrap-container-ev .entrevista-viajera .content .summary p {
     display: inline-block;
+    font-size: 1.4rem;
+    margin-bottom: 0.6rem;
+  }
+}
+@media (min-width: 37.5em) {
+  body.home .wrap-container-ev .entrevista-viajera .content .summary {
+    max-width: 70%;
+  }
+  body.home .wrap-container-ev .entrevista-viajera .content .summary h4 {
+    font-size: 2.5rem;
+  }
+  body.home .wrap-container-ev .entrevista-viajera .content .summary p {
+    font-size: 1.6rem;
+    margin-bottom: 1.5rem;
+  }
+}
+@media (min-width: 48em) {
+  body.home .wrap-container-ev .entrevista-viajera .content .entrevista-viajera .summary {
+    max-width: 50%;
+  }
+  body.home .wrap-container-ev .entrevista-viajera .content .entrevista-viajera .summary h4 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  body.home .wrap-container-ev .entrevista-viajera .content .entrevista-viajera .summary p {
+    font-size: 1.6rem;
+    margin-bottom: 2.5rem;
+  }
+  body.home .wrap-container-ev .entrevista-viajera .content .entrevista-viajera .summary > button {
+    width: 5.5rem;
+    height: 5.5rem;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5);
+  }
+}
+
+@media (min-width: 20em) {
+  div.owl-theme .owl-dots, div.owl-theme .owl-nav {
+    display: none;
+  }
+
+  .dvp-btn {
+    margin-top: 1.5rem;
+  }
+}
+@media (min-width: 37.5em) {
+  div.owl-theme .owl-dots {
+    margin-top: 1rem;
+    display: inline-block;
+  }
+
+  .dvp-btn {
+    margin-top: 0.5rem;
   }
 }
 
